# handlers/product_handler.go
@@ -4,23 +4,30 @@ import (
 	"context"
 	"net/http"
 
-	"github.com/buranasakS/trading_application/config"
 	db "github.com/buranasakS/trading_application/db/sqlc"
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5/pgtype"
 )
 
+type RequestProduct struct{
+	Name     string  `json:"name" binding:"required"`
+	Quantity int32   `json:"quantity" binding:"required"`
+	Price    float64 `json:"price" binding:"required"`
+}
+
 // CreateProductHandler godoc
 // @Summary      Create a new product
 // @Description  Create a new product details
 // @Tags         Products
+// @Security BearerAuth
 // @Accept       json
 // @Produce      json
 // @Param        request body      db.CreateProductParams true "Product details"
 // @Success      201  {object}  db.Product "Product created successfully"
+// @Failure 401 {object} handlers.ErrorResponse "Unauthorized"
 // @Router       /products [post]
-func CreateProductHandler(c *gin.Context) {
-	var req db.CreateProductParams
+func (h *Handler) CreateProductHandler(c *gin.Context) {
+	var req RequestProduct
 	if err := c.ShouldBindJSON(&req); err != nil {
 		c.JSON(400, gin.H{"error": err.Error()})
 		return
@@ -36,8 +43,11 @@ func CreateProductHandler(c *gin.Context) {
 		return
 	}
 
-	queries := db.New(config.ConnectDatabase().DB)
-	product, err := queries.CreateProduct(context.Background(), req)
+	product, err := h.db.CreateProduct(context.Background(), db.CreateProductParams{
+		Name: req.Name,
+		Quantity: req.Quantity,
+		Price: req.Price,
+	})
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create product"})
 		return
@@ -50,13 +60,15 @@ func CreateProductHandler(c *gin.Context) {
 // @Summary      List all products
 // @Description  List all products
 // @Tags         Products
+// @Security BearerAuth
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  []db.Product "List of products"
+// @Failure 401 {object} handlers.ErrorResponse "Unauthorized"
 // @Router       /products/list [get]
-func ListProductsHandler(c *gin.Context) {
-	queries := db.New(config.ConnectDatabase().DB)
-	products, err := queries.ListProducts(context.Background())
+func (h *Handler) ListProductsHandler(c *gin.Context) {
+
+	products, err := h.db.ListProducts(context.Background())
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to list products"})
 		return
@@ -69,20 +81,20 @@ func ListProductsHandler(c *gin.Context) {
 // @Summary      Get product details by ID
 // @Description  Retrieve product details by their unique ID
 // @Tags         Products
+// @Security BearerAuth
 // @Accept       json
 // @Produce      json
 // @Param        id   path      string  true  "Product ID (UUID)"
 // @Success      200  {object}  db.Product
+// @Failure 401 {object} handlers.ErrorResponse "Unauthorized"
 // @Router       /products/{id} [get]
-func GetProductByIDHandler(c *gin.Context) {
+func (h *Handler) GetProductDetailHandler(c *gin.Context) {
 	var productId pgtype.UUID
 	if err := productId.Scan(c.Param("id")); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid product ID"})
 		return
 	}
-
-	queries := db.New(config.ConnectDatabase().DB)
-	product, err := queries.GetProductByID(context.Background(), productId)
+	product, err := h.db.GetProductByID(context.Background(), productId)
 	if err != nil {
 		c.JSON(http.StatusNotFound, gin.H{"error": "Product not found"})
 		return
